--- a/prediction_of_calories_burnt.ipynb
+++ b/prediction_of_calories_burnt.ipynb
@@ -2575,6 +2575,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "to_remove = ['Weight', 'Duration']\n",
+        "df.drop(to_remove, axis=1, inplace=True)\n"
+      ],
+      "metadata": {
+        "id": "VyNMNegZCUpS"
+      },
+      "id": "VyNMNegZCUpS",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "5bc02287",
       "metadata": {
